# AI_Powered_Natural_Language_to_SQL_System

./: README.md  RESULTS.md  clinic.db  main.py  pyproject.toml  seed_memory.py  setup_database.py  vanna_setup.py
