[project]
name = "ai-powered-natural-language-to-sql-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.12.0",
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
    "vanna[sqlite]>=2.0.0",
]
